added compiler argument to prevent warnings when running mockito tests