@@ -56,5 +56,10 @@ kotlin {
 
 val compileKotlin: KotlinCompile by tasks
 compileKotlin.compilerOptions {
-    freeCompilerArgs.set(listOf("-Xannotation-default-target=param-property=param-property=param-property"))
+    freeCompilerArgs.set(
+        listOf(
+            "-Xannotation-default-target=param-property=param-property=param-property",
+            "-XX:+EnableDynamicAgentLoading"
+        )
+    )
 }
